--- a/style.css
+++ b/style.css
@@ -136,27 +136,57 @@ margin-left: 68%;
       transform: rotateY(-180deg);
     }
   }
+  .Frase_inicio{
+    text-align: center;
+    font-family: 'Alex Brush', cursive;
+         font-size: 25px;
+         color: #888888;
+         margin-top: -260%; 
+  }
+
+  .mari_azul{
+    width: 10%;
+    margin-left: 45%;
+  }
+ 
+.fondo{
+  width: 100%;
+  margin-top: 20%;
+}
+.fondo2{
+  width: 100%;
+
+}
 
 .parrafo1{
   margin: 15%;
     text-align: center;
-    color: #A682B4;
+    color:#CC787E;
     font-size: 224%;
     font-family: 'Great Vibes', cursive;
 }
 
 .copas{
-  width: 15%;
-  margin-left: 43%;
+  width: 20%;
+  margin-left: 41%;
   margin-top: -25%;
 }
-
+.whatsap{
+  width: 20%;
+  margin-left: 40%;
+  margin-top: -10%;
+}
 .gif{
   width: 10%;
   margin-top: -51%;
   margin-left: 62%;
 }
 .linea{
+  color:#646464;
+  width: 70%;
+ margin-left: 15%;
+}
+.linea2{
   color:#646464;
   width: 70%;
  margin-left: 15%;
@@ -169,12 +199,9 @@ margin-left: 68%;
     font-size: 26px;
     font-family: 'Great Vibes', cursive;
 }
-span{
-  color: #A682B4;
-  font-weight: 550;
-}
-.click {
-  margin-left: 35%;
+
+.clik {
+  margin-left: 36%;
   min-width: 130px;
   height: 40px;
   color: #fff;
@@ -187,38 +214,45 @@ span{
   outline: none;
   border-radius: 5px;
   z-index: 0;
-  background: #A682B4;
+  background: #CC787E;
   overflow: hidden;
   border: 2px rgb(215, 135, 222);
   color: rgb(255, 255, 255);
-  margin-top: -15%;
+}
+.contenedor-mapa{
+margin-top: -10%;
+justify-content: center;
 }
 .boton{
   margin-top: -5%;
 }
-.confeti{
-width: 13%;
-margin-top: -27%;
-margin-left: 59%;
+.gifmariposa{
+  width: 12%;
+  margin-left: 50%;
+  margin-top: -39%;
 }
-
 .parrafo3{
   margin: 16%;
     text-align: center;
     color: #575757;
     font-size: 26px;
     font-family: 'Great Vibes', cursive;
-    margin-top: -5%;
+    margin-top: 15%;
 }
 
 .parrafo4{
   margin: 16%;
     text-align: center;
-    color: #777777;
+    color: #CC787E;
     font-size: 26px;
     font-family: 'Great Vibes', cursive;
-    font-weight: 550;
+    font-weight: 600;
+    margin-top: 4%;
 }
+
+
+
+
 .parrafo5{
   margin: 16%;
     text-align: center;
