--- a/style.css
+++ b/style.css
@@ -141,9 +141,18 @@ margin-left: 68%;
     font-family: 'Alex Brush', cursive;
          font-size: 25px;
          color: #888888;
-         margin-top: -260%; 
+         margin-top: 30%; 
   }
-
+  .galeria{
+    width: 8%;
+    margin-left: 46%;
+    margin-top: 10%;
+  }
+  .carousel-inner img{
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 15%;
+  }
   .mari_azul{
     width: 10%;
     margin-left: 45%;
@@ -161,7 +170,7 @@ margin-left: 68%;
 .parrafo1{
   margin: 15%;
     text-align: center;
-    color:#CC787E;
+    color:#748DB6;
     font-size: 224%;
     font-family: 'Great Vibes', cursive;
 }
@@ -214,7 +223,7 @@ margin-left: 68%;
   outline: none;
   border-radius: 5px;
   z-index: 0;
-  background: #CC787E;
+  background: #B4C2D7;
   overflow: hidden;
   border: 2px rgb(215, 135, 222);
   color: rgb(255, 255, 255);
@@ -243,17 +252,23 @@ justify-content: center;
 .parrafo4{
   margin: 16%;
     text-align: center;
-    color: #CC787E;
+    color:#a3a3a3 ;
     font-size: 26px;
     font-family: 'Great Vibes', cursive;
     font-weight: 600;
     margin-top: 4%;
 }
 
-
-
-
 .parrafo5{
+  margin: 15%;
+    text-align: center;
+    color:#748DB6;
+    font-size: 224%;
+    font-family: 'Great Vibes', cursive;
+}
+
+
+.parrafo6{
   margin: 16%;
     text-align: center;
     color: #575757;
@@ -261,28 +276,12 @@ justify-content: center;
     font-family: 'Great Vibes', cursive;
     margin-top: -5%;
 }
-
-.click2{
-  margin-left: 24%;
-  min-width: 130px;
-  height: 40px;
-  color: #fff;
-  padding: 5px 10px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  position: relative;
-  display: inline-block;
-  outline: none;
-  border-radius: 5px;
-  z-index: 0;
-  background: #A682B4;
-  overflow: hidden;
-  border: 2px rgb(215, 135, 222);
-  color: rgb(255, 255, 255);
-  margin-top: -15%;
-  text-decoration: none;
+.regalo{
+  width: 8%;
+  margin-left: 47%;
+  margin-top: -19%;
 }
+
 
 .esperamos{
   margin: 16%;
@@ -292,16 +291,20 @@ justify-content: center;
   font-family: 'Great Vibes', cursive;
   margin-top: 25%;
 }
-.zara{
+.Tizi{
   width: 35%;
   margin-left: 32%;
-  margin-top: -25%;
+  margin-top: -15%;
 }
-
-.confeti2{
-  width: 13%;
-  margin-top: -105%;
-  margin-left: 59%;
+.corazon{
+  width: 5%;
+  margin-left: 48%;
+  margin-top: -90%;
+}
+.grises{
+  width: 28%;
+  margin-left: 33%;
+  margin-top: -100%;
   }
 }
   
