--- a/style.css
+++ b/style.css
@@ -248,7 +248,14 @@ justify-content: center;
     font-family: 'Great Vibes', cursive;
     margin-top: 15%;
 }
-
+.parrafo03{
+  margin: 16%;
+    text-align: center;
+    color: #575757;
+    font-size: 26px;
+    font-family: 'Great Vibes', cursive;
+    margin-top: -15%;
+}
 .parrafo4{
   margin: 16%;
     text-align: center;
